Add floating top-right social icons

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -273,6 +273,82 @@
       {{ 'accessibility.skip_to_text' | t }}
     </a>
 
+    {%- liquid
+      assign has_social_icons = false
+      if settings.social_facebook_link != blank or settings.social_instagram_link != blank or settings.social_youtube_link != blank or settings.social_tiktok_link != blank or settings.social_twitter_link != blank or settings.social_pinterest_link != blank or settings.social_snapchat_link != blank or settings.social_tumblr_link != blank or settings.social_vimeo_link != blank
+        assign has_social_icons = true
+      endif
+    -%}
+    {%- if has_social_icons -%}
+      <div class="floating-social-icons" aria-label="Social media links">
+        <ul class="floating-social-icons__list list-unstyled" role="list">
+          {%- if settings.social_facebook_link != blank -%}
+            <li>
+              <a href="{{ settings.social_facebook_link }}" class="floating-social-icons__link" target="_blank" rel="noreferrer" aria-label="{{ 'general.social.links.facebook' | t | default: 'Facebook' }}">
+                {%- render 'icon-facebook' -%}
+              </a>
+            </li>
+          {%- endif -%}
+          {%- if settings.social_instagram_link != blank -%}
+            <li>
+              <a href="{{ settings.social_instagram_link }}" class="floating-social-icons__link" target="_blank" rel="noreferrer" aria-label="{{ 'general.social.links.instagram' | t | default: 'Instagram' }}">
+                {%- render 'icon-instagram' -%}
+              </a>
+            </li>
+          {%- endif -%}
+          {%- if settings.social_youtube_link != blank -%}
+            <li>
+              <a href="{{ settings.social_youtube_link }}" class="floating-social-icons__link" target="_blank" rel="noreferrer" aria-label="{{ 'general.social.links.youtube' | t | default: 'YouTube' }}">
+                {%- render 'icon-youtube' -%}
+              </a>
+            </li>
+          {%- endif -%}
+          {%- if settings.social_tiktok_link != blank -%}
+            <li>
+              <a href="{{ settings.social_tiktok_link }}" class="floating-social-icons__link" target="_blank" rel="noreferrer" aria-label="{{ 'general.social.links.tiktok' | t | default: 'TikTok' }}">
+                {%- render 'icon-tiktok' -%}
+              </a>
+            </li>
+          {%- endif -%}
+          {%- if settings.social_twitter_link != blank -%}
+            <li>
+              <a href="{{ settings.social_twitter_link }}" class="floating-social-icons__link" target="_blank" rel="noreferrer" aria-label="{{ 'general.social.links.twitter' | t | default: 'Twitter' }}">
+                {%- render 'icon-twitter' -%}
+              </a>
+            </li>
+          {%- endif -%}
+          {%- if settings.social_pinterest_link != blank -%}
+            <li>
+              <a href="{{ settings.social_pinterest_link }}" class="floating-social-icons__link" target="_blank" rel="noreferrer" aria-label="{{ 'general.social.links.pinterest' | t | default: 'Pinterest' }}">
+                {%- render 'icon-pinterest' -%}
+              </a>
+            </li>
+          {%- endif -%}
+          {%- if settings.social_snapchat_link != blank -%}
+            <li>
+              <a href="{{ settings.social_snapchat_link }}" class="floating-social-icons__link" target="_blank" rel="noreferrer" aria-label="{{ 'general.social.links.snapchat' | t | default: 'Snapchat' }}">
+                {%- render 'icon-snapchat' -%}
+              </a>
+            </li>
+          {%- endif -%}
+          {%- if settings.social_tumblr_link != blank -%}
+            <li>
+              <a href="{{ settings.social_tumblr_link }}" class="floating-social-icons__link" target="_blank" rel="noreferrer" aria-label="{{ 'general.social.links.tumblr' | t | default: 'Tumblr' }}">
+                {%- render 'icon-tumblr' -%}
+              </a>
+            </li>
+          {%- endif -%}
+          {%- if settings.social_vimeo_link != blank -%}
+            <li>
+              <a href="{{ settings.social_vimeo_link }}" class="floating-social-icons__link" target="_blank" rel="noreferrer" aria-label="{{ 'general.social.links.vimeo' | t | default: 'Vimeo' }}">
+                {%- render 'icon-vimeo' -%}
+              </a>
+            </li>
+          {%- endif -%}
+        </ul>
+      </div>
+    {%- endif -%}
+
     {%- if settings.cart_type == 'drawer' -%}
       {%- render 'cart-drawer' -%}
     {%- endif -%}
