Add centered top search bar

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -355,6 +355,25 @@
 
     {% sections 'header-group' %}
 
+    <div class="top-search" role="search">
+      <div class="top-search__inner">
+        <form action="{{ routes.search_url }}" method="get" class="top-search__form">
+          <input
+            type="search"
+            name="q"
+            value="{{ search.terms | escape }}"
+            placeholder="Search products"
+            class="top-search__input"
+            aria-label="Search products"
+          >
+          <input type="hidden" name="options[prefix]" value="last">
+          <button type="submit" class="top-search__button">
+            {{ 'general.search.search' | t | default: 'Search' }}
+          </button>
+        </form>
+      </div>
+    </div>
+
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
