--- a/assets/base.css
+++ b/assets/base.css
@@ -2119,7 +2119,7 @@ product-info .loading-overlay:not(.hidden) ~ *,
 .floating-social-icons {
   position: fixed;
   top: 1.4rem;
-  right: 1.4rem;
+  left: 1.4rem;
   z-index: 10;
 }
 
@@ -2155,7 +2155,7 @@ product-info .loading-overlay:not(.hidden) ~ *,
 @media screen and (max-width: 749px) {
   .floating-social-icons {
     top: 1rem;
-    right: 1rem;
+    left: 1rem;
   }
 
   .floating-social-icons__link {
