--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -273,6 +273,9 @@
       {{ 'accessibility.skip_to_text' | t }}
     </a>
 
+    {% section 'cart-icon-bubble' %}
+    {% section 'cart-live-region-text' %}
+
     {%- liquid
       assign has_social_icons = false
       if settings.social_facebook_link != blank or settings.social_instagram_link != blank or settings.social_youtube_link != blank or settings.social_tiktok_link != blank or settings.social_twitter_link != blank or settings.social_pinterest_link != blank or settings.social_snapchat_link != blank or settings.social_tumblr_link != blank or settings.social_vimeo_link != blank
